Add mythic plus score colors update worker and scheduler

--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -28,8 +28,11 @@
             android:name=".main.MainActivity"
             android:theme="@style/AppTheme" />
 
-
         <receiver android:name=".app.browser.ShareUrlBroadcastReceiver" />
+        <provider
+            android:name="androidx.work.impl.WorkManagerInitializer"
+            android:authorities="${applicationId}.workmanager-init"
+            tools:node="remove" />
     </application>
 
 </manifest>
